--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <section class="story">
         <h2>A História</h2>
         <p>
-            Em **Resident Evil 4**, o agente Leon S. Kennedy é enviado em uma missão de resgate para salvar Ashley Graham, a filha do presidente dos Estados Unidos, que foi sequestrada por um culto misterioso. Ao chegar em uma aldeia isolada na Europa, Leon se depara com uma série de monstros controlados por uma infecção parasitária conhecida como Las Plagas. À medida que Leon luta para resgatar Ashley e sobreviver, ele é confrontado por várias ameaças, incluindo ex-companheiros e forças sombrias que buscam dominar o mundo. Leon terá que usar todas as suas habilidades para impedir a propagação do mal e salvar Ashley.
+            Resident Evil 4 segue Leon S. Kennedy, um agente do governo dos EUA, em uma missão para resgatar Ashley Graham, a filha do presidente, que foi sequestrada por um culto chamado Los Illuminados na Espanha. Durante a missão, Leon descobre que o culto usa um parasita chamado Las Plagas para controlar as pessoas, transformando-as em criaturas hostis chamadas Ganados.
+
+Leon conta com a ajuda de Luis Sera, um ex-membro do culto, e enfrenta diversas ameaças, incluindo Ramon Salazar e Jack Krauser. Ele descobre que o líder do culto, Osmund Saddler, pretende usar Ashley para espalhar o parasita e dominar o mundo.
+
+No final, Leon derrota Saddler e resgata Ashley, escapando de uma instalação prestes a ser destruída. No entanto, Ada Wong aparece, revelando ter suas próprias intenções, e o jogo termina com um mistério sobre os próximos passos da luta contra o bioterrorismo. O título é conhecido por sua jogabilidade revolucionária e foi aclamado como um dos maiores jogos de todos os tempos.
         </p>
     </section>
 
@@ -27,55 +31,55 @@
         <h2>Personagens</h2>
         
         <div class="character" id="leon">
-            <img src="leon.jpg" alt="Leon S. Kennedy">
+            <img src="Leon_RE4-Photoroom (1).png" alt="Leon S. Kennedy">
             <h3>Leon S. Kennedy</h3>
             <p>O protagonista do jogo, ex-policial e agora agente do governo dos EUA, enviado para resgatar Ashley Graham.</p>
         </div>
 
         <div class="character" id="ashley">
-            <img src="ashley.jpg" alt="Ashley Graham">
+            <img src="Ashley_RE4_-Photoroom (1) (1).png" alt="Ashley Graham">
             <h3>Ashley Graham</h3>
             <p>A filha do presidente dos Estados Unidos, sequestrada pelo culto Los Illuminados, e resgatada por Leon.</p>
         </div>
 
         <div class="character" id="luis">
-            <img src="luis.jpg" alt="Luis Serra">
+            <img src="Residentevil4_conceptart_XkIpm-Photoroom.png" alt="Luis Serra">
             <h3>Luis Serra</h3>
             <p>Um ex-membro do culto Los Illuminados, que ajuda Leon e Ashley em sua missão.</p>
         </div>
 
         <div class="character" id="ada">
-            <img src="ada.jpg" alt="Ada Wong">
+            <img src="Ada2.png" alt="Ada Wong">
             <h3>Ada Wong</h3>
             <p>Uma espiã misteriosa com um papel importante na trama, cujas intenções nem sempre são claras.</p>
         </div>
 
         <div class="character" id="saddler">
-            <img src="saddler.jpg" alt="Osmund Saddler">
+            <img src="Osmund_Saddler_2.png" alt="Osmund Saddler">
             <h3>Osmund Saddler</h3>
             <p>O principal antagonista do jogo, líder do culto Los Illuminados, buscando controlar o mundo com o poder das Las Plagas.</p>
         </div>
 
         <div class="character" id="mendez">
-            <img src="mendez.jpg" alt="Bitores Mendez">
+            <img src="Re4-bitores-mendez-1.png" alt="Bitores Mendez">
             <h3>Bitores Mendez</h3>
             <p>O chefe da aldeia e um dos principais seguidores de Saddler. Ele se torna uma ameaça monstruosa.</p>
         </div>
 
         <div class="character" id="salazar">
-            <img src="salazar.jpg" alt="Ramon Salazar">
+            <img src="Ramon_Salazar_Near_Pure_Evil.png" alt="Ramon Salazar">
             <h3>Ramon Salazar</h3>
             <p>O vilão excêntrico e membro da nobreza espanhola, aliado de Saddler, que governa a mansão e os arredores.</p>
         </div>
 
         <div class="character" id="krauser">
-            <img src="krauser.jpg" alt="Jack Krauser">
+            <img src="RE_Mercenaries_3D_Krauser_psd_jpgcopy.png" alt="Jack Krauser">
             <h3>Jack Krauser</h3>
             <p>Um ex-companheiro de Leon que agora é um inimigo mortal. Ele está sob o controle do culto.</p>
         </div>
 
         <div class="character" id="merchant">
-            <img src="merchant.jpg" alt="The Merchant">
+            <img src="Merchant_re4.png" alt="The Merchant">
             <h3>The Merchant</h3>
             <p>Um misterioso comerciante que aparece durante a jornada de Leon, oferecendo armas e mercadorias em troca de pesetas.</p>
         </div>
