--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resident Evil 4 - História e Personagens</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="outro.css">
+	
 </head>
 <body>
+	<!-- partial:index.partial.html -->
+<!-- Google Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+<!-- SwiperJS CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
     <header>
         <div class="header-content">
             <h1>Resident Evil 4</h1>
@@ -26,11 +36,15 @@ Leon conta com a ajuda de Luis Sera, um ex-membro do culto, e enfrenta diversas 
 No final, Leon derrota Saddler e resgata Ashley, escapando de uma instalação prestes a ser destruída. No entanto, Ada Wong aparece, revelando ter suas próprias intenções, e o jogo termina com um mistério sobre os próximos passos da luta contra o bioterrorismo. O título é conhecido por sua jogabilidade revolucionária e foi aclamado como um dos maiores jogos de todos os tempos.
         </p>
     </section>
+
     <div class="swiper movies">
 	<div class="swiper-wrapper">
+		
 		<div class="swiper-slide">
 			<img src="leon-s-kennedy-resident-evil-4-resident-evil-2-ada-wong-resident-evil-the-darkside-chronicles-resident-evil-4.png" />
 			<div class="info">
+			
+			
 		  <h3>Leon S. Kennedy</h3>
             <p>O protagonista do jogo, ex-policial e agora agente do governo dos EUA, enviado para resgatar Ashley Graham.</p>
 				<div class="actions">
@@ -53,7 +67,7 @@ No final, Leon derrota Saddler e resgata Ashley, escapando de uma instalação p
             <p>Um ex-membro do culto Los Illuminados, que ajuda Leon e Ashley em sua missão.</p>
 			</div>
 		</div>
-		<div class="swiper-slide">
+		 >	<div class="swiper-slide">
 			<img src="Ada2.png" />
 			<div class="info">
 				<h3>Ada Wong</h3>
@@ -109,7 +123,9 @@ No final, Leon derrota Saddler e resgata Ashley, escapando de uma instalação p
     <footer>
         <p>© 2025 Resident Evil 4 - Centro Estadual de Educação Profissional de Cianorte CEEP</p>
     </footer>
-
+<!-- SwiperJS JS -->
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<!-- partial -->
     <script src="scripts.js"></script>
 </body>
 </html>
