--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 
 </head>
 
+
+
+</style>
+</head>
+<body>
+  <!-- Botão para voltar para a página do vídeo -->
+  <button class="button" onclick="window.location.href='Outro.html'">Voltar</button>
+</body>
+</html>
 <body>
 	<!-- partial:index.partial.html -->
 	<!-- Google Fonts -->
@@ -36,19 +45,7 @@
 	<section class="story">
 		<h2>A História</h2>
 		<p>
-			Resident Evil 4 segue Leon S. Kennedy, um agente do governo dos EUA, em uma missão para resgatar Ashley
-			Graham, a filha do presidente, que foi sequestrada por um culto chamado Los Illuminados na Espanha. Durante
-			a missão, Leon descobre que o culto usa um parasita chamado Las Plagas para controlar as pessoas,
-			transformando-as em criaturas hostis chamadas Ganados.
-
-			Leon conta com a ajuda de Luis Sera, um ex-membro do culto, e enfrenta diversas ameaças, incluindo Ramon
-			Salazar e Jack Krauser. Ele descobre que o líder do culto, Osmund Saddler, pretende usar Ashley para
-			espalhar o parasita e dominar o mundo.
-
-			No final, Leon derrota Saddler e resgata Ashley, escapando de uma instalação prestes a ser destruída. No
-			entanto, Ada Wong aparece, revelando ter suas próprias intenções, e o jogo termina com um mistério sobre os
-			próximos passos da luta contra o bioterrorismo. O título é conhecido por sua jogabilidade revolucionária e
-			foi aclamado como um dos maiores jogos de todos os tempos.
+			Resident Evil 4 segue Leon S. Kennedy, um agente do governo dos EUA, em uma missão para resgatar Ashley Graham, a filha do presidente, que foi sequestrada por um culto chamado Los Illuminados na Espanha. Durante a missão, Leon descobre que o culto usa um parasita chamado Las Plagas para controlar as pessoas, transformando-as em criaturas hostis chamadas Ganados. Leon conta com a ajuda de Luis Sera, um ex-membro do culto, e enfrenta diversas ameaças, incluindo Ramon Salazar e Jack Krauser. Ele descobre que o líder do culto, Osmund Saddler, pretende usar Ashley para espalhar o parasita e dominar o mundo. No final, Leon derrota Saddler e resgata Ashley, escapando de uma instalação prestes a ser destruída. No entanto, Ada Wong aparece, revelando ter suas próprias intenções, e o jogo termina com um mistério sobre os próximos passos da luta contra o bioterrorismo. O título é conhecido por sua jogabilidade revolucionária e foi aclamado como um dos maiores jogos de todos os tempos.
 		</p>
 	</section>
 
@@ -108,8 +105,7 @@
 
 						Saddler deseja espalhar o parasita pelo mundo, criando um exército de seguidores controlados. No final, Leon enfrenta Saddler em uma batalha decisiva e consegue derrotá-lo, frustrando seus planos de bioterrorismo.</p>
 					<div class="actions">
-						<a href="#" class="button">Stream</a>
-						<a href="#" class="button">Download</a>
+						
 					</div>
 				</div>
 			</div>
@@ -161,8 +157,7 @@
 		</div>
 		<div class="swiper-pagination"></div>
 	</div>
-<video autoplay muted loop id="video-fundo">
-  <source src="Resident Evil 4 - Trailer de Anúncio - Capcom Brasil (1080p, h264, youtube).mp4" type=" video/mp4">
+
 
 	<!-- Seção de Personagens -->
 
