--- a/Outro.html
+++ b/Outro.html
@@ -26,7 +26,7 @@
         }
         button {
             background-color: #2e3b4e;
-            color: white;
+            color: whitfont-family: "BBH Sans Bogle", sans-serif;e;
             padding: 15px 30px;
             border: none;
             border-radius: 5px;
